--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,8 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # This runs the action every day at 12:00 PM UTC (adjust as needed)
-  workflow_dispatch:  # This allows you to manually trigger the workflow
+    - cron: '0 12 * * *'  # Runs every day at 12:00 PM UTC
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   commit:
@@ -12,20 +12,22 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # Disable default GitHub Token
 
-      - name: Add commit by shivam.barman@gramener.com
+      - name: Configure Git
         run: |
-          # Set Git user name and email
           git config --global user.name "shivam"
           git config --global user.email "shivam@gmail.com"
 
-          # Create a new file or modify an existing file
-          echo "Automated commit by GitHub Action" > daily_commit.txt
+      - name: Make Changes
+        run: |
+          echo "Automated commit by GitHub Action - $(date)" > daily_commit.txt
 
-          # Stage, commit, and push the changes
+      - name: Commit and Push
+        env:
+          PAT: ${{ secrets.GH_PAT }}
+        run: |
           git add .
           git commit -m "Automated commit by GitHub Action"
-          git push
-
-
-
+          git push https://shivamsinghbarman:${PAT}@github.com/Shivamsinghbarman/actions_repo.git main
