--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Shivam.barman@gramener.com
         uses: actions/checkout@v3
         with:
           persist-credentials: false  # Disable default GitHub Token
