--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,23 @@
-name: Shivam.barman@gramener.com
+name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # Runs every day at 12:00 PM UTC
+    - cron: "30 2 * * *"  # Runs daily at 02:30 UTC
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  commit:
+  commit-job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Shivam.barman@gramener.com
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false  # Disable default GitHub Token
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Shivam.barman@gramener.com
+      - name: Add a commit - shivam.barman@gramener.com
         run: |
-          git config --global user.name "shivam"
-          git config --global user.email "shivam.barman@gramener.com"
-
-      - name: Shivam.barman@gramener.com
-        run: |
-          echo "Automated commit by GitHub Action - $(date)" > daily_commit.txt
-
-      - name: Shivam.barman@gramener.com
-        env:
-          PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git add .
+          date >> daily-log.txt
           git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "shivam.barman@gramener.com"
-          git commit -m "Automated commit by GitHub Action"
-          git push https://shivamsinghbarman:${PAT}@github.com/Shivamsinghbarman/actions_repo.git main
+          git config --global user.email "nitin.kumar1@straive.com"
+          git add daily-log.txt
+          git commit -m "Daily commit: $(date)"
+          git push
